# cse220_hw5

./: .gitignore  CMakeLists.txt  hw5.asm  run_and_compare.c
.devcontainer/: Dockerfile  devcontainer.json
tests/: delete_01.asm  delete_02.asm  delete_03.asm  delete_04.asm  delete_05.asm  delete_06.asm  delete_07.asm  init_print_01.asm  init_print_02.asm  init_print_03.asm  init_print_04.asm  init_student_array_01.asm  init_student_array_02.asm  init_student_array_03.asm  init_student_array_04.asm  insert_01.asm  insert_02.asm  insert_03.asm  p12_tester.asm  p3_tester.asm  p4_tester.asm  p5_tester.asm  p6_tester.asm  search_01.asm  search_02.asm  search_03.asm  search_04.asm  search_05.asm  search_06.asm  search_07.asm
tests/expected_outputs/: delete_01.txt  delete_02.txt  delete_03.txt  delete_04.txt  delete_05.txt  delete_06.txt  delete_07.txt  init_print_01.txt  init_print_02.txt  init_print_03.txt  init_print_04.txt  init_student_array_01.txt  init_student_array_02.txt  init_student_array_04.txt  insert_01.txt  insert_02.txt  insert_03.txt  search_01.txt  search_03.txt  search_04.txt  search_05.txt  search_07.txt
tests/include/: tests_aux.h
tests/src/: tests_aux.cpp  tests_delete.cpp  tests_init_print.cpp  tests_init_student_array.cpp  tests_insert.cpp  tests_search.cpp
